--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
 <body>
 
   <header>
-    <h1>Ketki</h1>
+    <h1>Ketki Nalawade</h1>
     <p>Architect & Cross-Domain Designer</p>
   </header>
 
   <main>
     <div class="button-group">
-      <a class="button" href="Quick Folio_compressed.pdf" target="_blank">📄 View Portfolio 1</a>
-      <a class="button" href="port2.pdf" target="_blank">📄 View Portfolio 2</a>
+      <a class="button" href="Quick Folio_compressed.pdf" target="_blank">📄 View B.Arch Portfolio</a>
+      <a class="button" href="port2.pdf" target="_blank">📄 View Internship Portfolio</a>
       <a class="button" href="Ketki Nalawade Resume.pdf" target="_blank">📄 View Resume</a>
     </div>
   </main>
